--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">android</string>
+    <string name="linear_Layout">Linear Layout</string>
+    <string name="frame_Layout">Frame Layout</string>
+    <string name="Table_Layout">Table Layout</string>
+    <string name="Relative_Layout">Relative Layout</string>
+
 </resources>
