--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="Relative_Layout">Relative Layout</string>
     <string name="Card_View_Spinner">Card View Spinner</string>
     <string name="Recycler_view">Recycler View</string>
+    <string name="navigation">Navigation/Fragments</string>
+    <string name="book">Book </string>
     <string-array name="random_names">
         <item>Zelda</item>
         <item>Senku</item>
@@ -15,5 +17,14 @@
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_detail_book">Detail_Book</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 </resources>
